Added support for code blocks and formatting on answer

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@tailwindcss/typography": "^0.5.16",
     "ai": "^3.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "highlight.js": "^11.11.1",
     "ignore": "^6.0.2",
     "langchain": "^0.3.2",
     "lucide-react": "^0.445.0",
@@ -33,6 +35,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
